--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-           <link rel="icon" type="image/png" sizes="32x32" href="assets/img/New logo.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/New logo.png">
+           <link rel="icon" type="image/png" sizes="32x32" href="New logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="New logo.png">
 
         <!--========== BOX ICONS ==========-->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="styles.css">
 
         <title>Homesure</title>
-        <a href="assets/img/New logo.png"></a>
+        <a href="New logo.png"></a>
     </head>
     <body>
 
@@ -26,7 +26,7 @@
         <!--========== HEADER ==========-->
        <header>
   <div class="header-container">
-    <img src="assets/img/New logo.png" alt="Company Logo" class="logo">
+    <img src="New logo.png" alt="Company Logo" class="logo">
     <h1>Homesure</h1>
   </div>
   <p>Quality Services at Your Doorstep</p>
@@ -91,7 +91,7 @@
                         <a href="Services.html" class="button">Book Now</a>
                     </div>
     
-                    <img src="assets/img/home.png" alt="" class="home__img">
+                    <img src="Home.png" alt="" class="home__img">
                 </div>
             </section>
             
@@ -101,42 +101,42 @@
 
   <div class="looking-options">
     <div class="option" onclick="location.href='#bathroom'">
-      <img src="assets/img/Bathroom icon.png" alt="Bathroom">
+      <img src="Bathroom icon.png" alt="Bathroom">
       <span>Bathroom Cleaning</span>
       <a href="Bathroomcleaning.html" class="button">Book Now</a>
     </div>
     <div class="option" onclick="location.href='#kitchen'">
-      <img src="assets/img/Kitchen icon.png" alt="Kitchen">
+      <img src="Kitchen icon.png" alt="Kitchen">
       <span>Kitchen Cleaning</span>
       <a href="kitchen.html" class="button">Book Now</a>
     </div>
     <div class="option" onclick="location.href='#sofa'">
-      <img src="assets/img/Sofa icon.png" alt="Sofa">
+      <img src="Sofa icon.png" alt="Sofa">
       <span>Sofa Cleaning</span>
       <a href="sofa.html" class="button">Book Now</a>
     </div>
     <div class="option" onclick="location.href='#laundry'">
-      <img src="assets/img/Laundy icon.png" alt="Laundry">
+      <img src="Laundry icon.png" alt="Laundry">
       <span>Laundry</span>
       <a href="laundry.html" class="button">Book Now</a>
     </div>
     <div class="option" onclick="location.href='#ac'">
-      <img src="assets/img/AC icon.png" alt="AC">
+      <img src="AC icon.png" alt="AC">
       <span>AC Repair</span>
       <a href="ac.html" class="button">Book Now</a>
     </div>
     <div class="option" onclick="location.href='#plumbing'">
-      <img src="assets/img/Plumber Icon.png" alt="Plumbing">
+      <img src="Plumber Icon.png" alt="Plumbing">
       <span>Plumbing</span>
       <a href="plumbing.html" class="button">Book Now</a>
     </div>
     <div class="option" onclick="location.href='#deep-cleaning'">
-      <img src="assets/img/Cleaning icon.png" alt="Deep Cleaning">
+      <img src="Cleaning icon.png" alt="Deep Cleaning">
       <span>Deep Cleaning</span>
       <a href="Deepclean.html" class="button">Book Now</a>
     </div>
     <div class="option" onclick="location.href='#electrician'">
-      <img src="assets/img/Electricion icon.png" alt="Electrician">
+      <img src="Electricion icon.png" alt="Electrician">
       <span>Electrician</span>
       <a href="Electrician.html" class="button">Book Now</a>
   </div>
@@ -506,6 +506,6 @@ faqItems.forEach(item => {
         <script src="https://unpkg.com/scrollreveal"></script>
 
         <!--========== MAIN JS ==========-->
-        <script src="assets/js/main.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
