--- a/ac.html
+++ b/ac.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-           <link rel="icon" type="image/png" sizes="32x32" href="assets/img/New logo.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/New logo.png">
+           <link rel="icon" type="image/png" sizes="32x32" href="New logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="New logo.png">
   <header>
   <div class="header-container">
     <img src="assets/img/New logo.png" alt="Company Logo" class="logo">
@@ -181,7 +181,7 @@
 
   <!-- AC Installation -->
   <div class="service-card">
-    <img src="assets/img/ac.png" alt="AC Installation">
+    <img src="ac.html" alt="AC Installation">
     <div class="content">
       <h2>AC Installation</h2>
       <p>Expert installation for Split & Window ACs with proper fittings.</p>
@@ -199,7 +199,7 @@
 
   <!-- AC Uninstallation -->
   <div class="service-card">
-    <img src="assets/img/ac2.png" alt="AC Uninstallation">
+    <img src="ac2.png" alt="AC Uninstallation">
     <div class="content">
       <h2>AC Uninstallation</h2>
       <p>Safe and careful dismantling of your AC unit.</p>
@@ -217,7 +217,7 @@
 
   <!-- AC Servicing -->
   <div class="service-card">
-    <img src="assets/img/ac3.png" alt="AC Servicing">
+    <img src="ac3.png" alt="AC Servicing">
     <div class="content">
       <h2>AC Servicing</h2>
       <p>General cleaning & maintenance for efficient cooling.</p>
@@ -235,7 +235,7 @@
 
   <!-- AC Deep Cleaning -->
   <div class="service-card">
-    <img src="assets/img/ac4.png" alt="AC Deep Cleaning">
+    <img src="ac4.png" alt="AC Deep Cleaning">
     <div class="content">
       <h2>AC Deep Cleaning</h2>
       <p>High-pressure jet cleaning for coils, filters, and blower.</p>
@@ -253,7 +253,7 @@
 
   <!-- AC Gas Refilling -->
   <div class="service-card">
-    <img src="assets/img/ac5.png" alt="AC Gas Refilling">
+    <img src="ac5.png" alt="AC Gas Refilling">
     <div class="content">
       <h2>AC Gas Refilling</h2>
       <p>Refilling refrigerant for better cooling efficiency.</p>
