--- a/Bathroomcleaning.html
+++ b/Bathroomcleaning.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-           <link rel="icon" type="image/png" sizes="32x32" href="assets/img/New logo.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/New logo.png">
+           <link rel="icon" type="image/png" sizes="32x32" href="New logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="New logo.png">
   <header>
   <div class="header-container">
-    <img src="assets/img/New logo.png" alt="Company Logo" class="logo">
+    <img src="New logo.png" alt="Company Logo" class="logo">
     <h1>Homesure
       Bathrooms Cleaning
     </h1>
@@ -146,7 +146,7 @@
 
   <!-- Single Bathroom -->
   <div class="service-card">
-    <img src="assets/img/Bath1.png" alt="Single Bathroom Cleaning">
+    <img src="Bath1.png" alt="Single Bathroom Cleaning">
     <div class="content">
       <h2>Single Bathroom</h2>
       <p>Deep cleaning of tiles, WC, wash basin, fittings, and mirrors.</p>
@@ -164,7 +164,7 @@
 
   <!-- Two Bathrooms -->
   <div class="service-card">
-    <img src="assets/img/Bath2.png" alt="Two Bathrooms">
+    <img src="bath2.png" alt="Two Bathrooms">
     <div class="content">
       <h2>Two Bathrooms</h2>
       <p>Complete cleaning for two bathrooms including scrubbing & sanitization.</p>
@@ -182,7 +182,7 @@
 
   <!-- Three Bathrooms -->
   <div class="service-card">
-    <img src="assets/img/Bath3.png" alt="Three Bathrooms">
+    <img src="bath3.png" alt="Three Bathrooms">
     <div class="content">
       <h2>Three Bathrooms</h2>
       <p>Detailed deep cleaning for three bathrooms with descaling & sanitization.</p>
@@ -200,7 +200,7 @@
 
   <!-- Four+ Bathrooms -->
   <div class="service-card">
-    <img src="assets/img/Bath4.png" alt="Four+ Bathrooms">
+    <img src="bath4.png" alt="Four+ Bathrooms">
     <div class="content">
       <h2>Four+ Bathrooms</h2>
       <p>Custom package for large homes with 4 or more bathrooms.</p>
