--- a/Deepclean.html
+++ b/Deepclean.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-           <link rel="icon" type="image/png" sizes="32x32" href="assets/img/New logo.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/New logo.png">
+           <link rel="icon" type="image/png" sizes="32x32" href="New logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="New logo.png">
    <header>
   <div class="header-container">
-    <img src="assets/img/New logo.png" alt="Company Logo" class="logo">
+    <img src="New logo.png" alt="Company Logo" class="logo">
     <h1>Homesure
        Deep Cleaning Services
     </h1>
@@ -147,7 +147,7 @@
 
   <!-- 1 BHK Cleaning -->
   <div class="service-card">
-    <img src="assets/img/Cleaning 1.png" alt="1 BHK Cleaning">
+    <img src="Cleaning 1.png" alt="1 BHK Cleaning">
     <div class="content">
       <h2>1 BHK Deep Cleaning</h2>
       <p>Complete home cleaning including kitchen, bathroom, floors, and furniture.</p>
@@ -165,7 +165,7 @@
 
   <!-- 2 BHK Cleaning -->
   <div class="service-card">
-    <img src="assets/img/Cleaning 2.png" alt="2 BHK Cleaning">
+    <img src="Cleaning 2.png" alt="2 BHK Cleaning">
     <div class="content">
       <h2>2 BHK Deep Cleaning</h2>
       <p>Full cleaning for 2 BHK with kitchen degreasing, bathrooms, and bedrooms.</p>
@@ -183,7 +183,7 @@
 
   <!-- 3 BHK Cleaning -->
   <div class="service-card">
-    <img src="assets/img/ap11.png" alt="3 BHK Cleaning">
+    <img src="ap11.png" alt="3 BHK Cleaning">
     <div class="content">
       <h2>3 BHK Deep Cleaning</h2>
       <p>Intensive cleaning for larger homes including all rooms, balconies & more.</p>
@@ -201,7 +201,7 @@
 
   <!-- Villa / Independent House -->
   <div class="service-card">
-    <img src="assets/img/ap13.png" alt="Villa Cleaning">
+    <img src="ap13.png" alt="Villa Cleaning">
     <div class="content">
       <h2>Villa / Independent House</h2>
       <p>Complete villa deep cleaning with all rooms, kitchen, bathrooms, and outdoor area.</p>
