--- a/ac.html
+++ b/ac.html
@@ -181,7 +181,7 @@
 
   <!-- AC Installation -->
   <div class="service-card">
-    <img src="ac.html" alt="AC Installation">
+    <img src="ac.png" alt="AC Installation">
     <div class="content">
       <h2>AC Installation</h2>
       <p>Expert installation for Split & Window ACs with proper fittings.</p>
