--- a/kitchen.html
+++ b/kitchen.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-           <link rel="icon" type="image/png" sizes="32x32" href="assets/img/New logo.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/New logo.png">
+           <link rel="icon" type="image/png" sizes="32x32" href="New logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="New logo.png">
   <title>Homesure Kitchen Services</title>
   <style>
     body {
@@ -110,7 +110,7 @@
 
   <!-- Kitchen Deep Cleaning -->
   <div class="service-card">
-    <img src="assets/img/Kitchen.png" alt="Kitchen Cleaning">
+    <img src="Kitchen.png" alt="Kitchen Cleaning">
     <div class="content">
       <h2>Full Kitchen Cleaning</h2>
       <p>Countertops, cabinets, floor, sink & appliances cleaning.</p>
@@ -130,7 +130,7 @@
 
   <!-- Chimney & Hob Cleaning -->
   <div class="service-card">
-    <img src="assets/img/KitchenN.png" alt="Chimney Cleaning">
+    <img src="KitchenN.png" alt="Chimney Cleaning">
     <div class="content">
       <h2>Chimney & Hob Cleaning</h2>
       <p>Oil and grease removal from chimney and stove hob.</p>
@@ -149,7 +149,7 @@
 
   <!-- Fridge Cleaning -->
   <div class="service-card">
-    <img src="assets/img/Microwave.jpg" alt="Fridge Cleaning">
+    <img src="Microwave.jpg" alt="Fridge Cleaning">
     <div class="content">
       <h2>Fridge Cleaning</h2>
       <p>Complete cleaning and deodorization of refrigerator.</p>
@@ -168,7 +168,7 @@
 
   <!-- Microwave & Oven Cleaning -->
   <div class="service-card">
-    <img src="assets/img/Appliance.png" alt="Microwave Cleaning">
+    <img src="Appliance.png" alt="Microwave Cleaning">
     <div class="content">
       <h2>Microwave & Oven Cleaning</h2>
       <p>Internal and external cleaning with sanitization.</p>
