--- a/laundry.html
+++ b/laundry.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-           <link rel="icon" type="image/png" sizes="32x32" href="assets/img/New logo.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/New logo.png">
+           <link rel="icon" type="image/png" sizes="32x32" href="New logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="New logo.png">
   <title>Homesure Laundry Services</title>
   <style>
     body {
@@ -110,7 +110,7 @@
 
   <!-- Washing & Folding -->
   <div class="service-card">
-    <img src="assets/img/Laundry.png" alt="Laundry Wash & Fold">
+    <img src="Laundry.png" alt="Laundry Wash & Fold">
     <div class="content">
       <h2>Washing & Folding</h2>
       <p>Regular washing, drying & folding of clothes.</p>
@@ -129,7 +129,7 @@
 
   <!-- Washing & Ironing -->
   <div class="service-card">
-    <img src="assets/img/iron.png" alt="Laundry Wash & Iron">
+    <img src="iron.png" alt="Laundry Wash & Iron">
     <div class="content">
       <h2>Washing & Ironing</h2>
       <p>Fresh wash with professional ironing for crisp clothes.</p>
@@ -148,7 +148,7 @@
 
   <!-- Dry Cleaning -->
   <div class="service-card">
-    <img src="assets/img/dryclean.png" alt="Dry Cleaning">
+    <img src="dryclean.png" alt="Dry Cleaning">
     <div class="content">
       <h2>Dry Cleaning</h2>
       <p>Special care for coats, blazers, sarees & delicate fabrics.</p>
@@ -167,7 +167,7 @@
 
   <!-- Only Ironing -->
   <div class="service-card">
-    <img src="assets/img/iron2.png" alt="Ironing Service">
+    <img src="iron2.png" alt="Ironing Service">
     <div class="content">
       <h2>Only Ironing</h2>
       <p>Neat and crisp ironing for all clothes.</p>
