--- a/Electrician.html
+++ b/Electrician.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-           <link rel="icon" type="image/png" sizes="32x32" href="assets/img/New logo.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/New logo.png">
+           <link rel="icon" type="image/png" sizes="32x32" href="New logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="New logo.png">
   <title>Homesure Electrician Services</title>
   <style>
     body {
@@ -110,7 +110,7 @@
 
   <!-- Fan Installation -->
   <div class="service-card">
-    <img src="assets/img/EL4.png" alt="Fan Installation">
+    <img src="EL4.png" alt="Fan Installation">
     <div class="content">
       <h2>Fan Installation</h2>
       <p>Ceiling, wall, or exhaust fan installation with wiring.</p>
@@ -129,7 +129,7 @@
 
   <!-- Light Installation -->
   <div class="service-card">
-    <img src="assets/img/EL2.png" alt="Light Installation">
+    <img src="EL2.png" alt="Light Installation">
     <div class="content">
       <h2>Light Installation</h2>
       <p>Tube lights, bulbs, chandeliers, and decorative fittings.</p>
@@ -148,7 +148,7 @@
 
   <!-- Switch & Socket Repair -->
   <div class="service-card">
-    <img src="assets/img/EL3.png" alt="Switch & Socket">
+    <img src="EL3.png" alt="Switch & Socket">
     <div class="content">
       <h2>Switch & Socket Repair</h2>
       <p>Repair & replacement of faulty switches, sockets, and holders.</p>
@@ -167,7 +167,7 @@
 
   <!-- Wiring & Fitting -->
   <div class="service-card">
-    <img src="assets/img/EL1.png" alt="Wiring & Fitting">
+    <img src="EL1.png" alt="Wiring & Fitting">
     <div class="content">
       <h2>Wiring & Fitting</h2>
       <p>Electrical wiring for new fittings or rewiring for safety.</p>
