--- a/plumbing.html
+++ b/plumbing.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-           <link rel="icon" type="image/png" sizes="32x32" href="assets/img/New logo.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/New logo.png">
+           <link rel="icon" type="image/png" sizes="32x32" href="New logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="New logo.png">
   <title>Homesure Plumbing Services</title>
   <style>
     body {
@@ -110,7 +110,7 @@
 
   <!-- Tap & Faucet Repair -->
   <div class="service-card">
-    <img src="assets/img/plumber 1.png" alt="Tap Repair">
+    <img src="plumber 1.png" alt="Tap Repair">
     <div class="content">
       <h2>Tap & Faucet Repair</h2>
       <p>Fixing leaks, drips and faucet replacements.</p>
@@ -128,7 +128,7 @@
 
   <!-- Blocked Drain -->
   <div class="service-card">
-    <img src="assets/img/plumber2.png" alt="Drain Cleaning">
+    <img src="plumber2.png" alt="Drain Cleaning">
     <div class="content">
       <h2>Blocked Drain</h2>
       <p>Unclogging sinks, bathrooms & floor drains.</p>
@@ -147,7 +147,7 @@
 
   <!-- Pipe Leakage Fix -->
   <div class="service-card">
-    <img src="assets/img/plumber5.png" alt="Pipe Repair">
+    <img src="plumber5.png" alt="Pipe Repair">
     <div class="content">
       <h2>Pipe Leakage Fix</h2>
       <p>Leakage detection, sealing & replacement of pipes.</p>
@@ -165,7 +165,7 @@
 
   <!-- Toilet Repair -->
   <div class="service-card">
-    <img src="assets/img/plumber4.png" alt="Toilet Repair">
+    <img src="plumber4.png" alt="Toilet Repair">
     <div class="content">
       <h2>Toilet Repair</h2>
       <p>Flush tank repair, leak fixing & new installations.</p>
