--- a/ac.html
+++ b/ac.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="New logo.png">
   <header>
   <div class="header-container">
-    <img src="assets/img/New logo.png" alt="Company Logo" class="logo">
+    <img src="New logo.png" alt="Company Logo" class="logo">
     <h1>Homesure
       AC Services
     </h1>
@@ -438,4 +438,5 @@
   color: #888;
 }
 </style>
+
 
