--- a/pricing.html
+++ b/pricing.html
@@ -123,12 +123,12 @@
       <div class="service-price">₹1499</div>
     </div>
 
-    <a href="HomeSure/ac.html" class="back-btn">⬅ Go to AC Services</a>
-    <a href="HomeSure/plumbing.html" class="back-btn">⬅ Go to Plumbing Services</a>
-    <a href="HomeSure/Bathroomcleaning.html" class="back-btn">⬅ Go to Bathroom Cleaning Services</a>
-    <a href="HomeSure/sofa.html" class="back-btn">⬅ Go to Sofa Cleaning Services</a>
-    <a href="HomeSure/laundry.html" class="back-btn">⬅ Go to Laundry Services</a>
-    <a href="HomeSure/electrician.html" class="back-btn">⬅ Go to Electrician Services</a>
+    <a href="ac.html" class="back-btn">⬅ Go to AC Services</a>
+    <a href="plumbing.html" class="back-btn">⬅ Go to Plumbing Services</a>
+    <a href="Bathroomcleaning.html" class="back-btn">⬅ Go to Bathroom Cleaning Services</a>
+    <a href="sofa.html" class="back-btn">⬅ Go to Sofa Cleaning Services</a>
+    <a href="laundry.html" class="back-btn">⬅ Go to Laundry Services</a>
+    <a href="Electrician.html" class="back-btn">⬅ Go to Electrician Services</a>
   </div>
 </body>
 </html>
